--- a/API's IBGE para obter dados de Localidade, População, PIB e IDH.ipynb
+++ b/API's IBGE para obter dados de Localidade, População, PIB e IDH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -181,29 +181,29 @@
    },
    "outputs": [],
    "source": [
-    "df_flat = df.withColumnRenamed(\"id\", 'id_municipio')\\\n",
-    "            .withColumnRenamed(\"nome\", \"nome_municipio\")\\\n",
-    "            .withColumn(\"id_microrregiao\", col(\"microrregiao.id\"))\\\n",
-    "            .withColumn(\"nome_microrregiao\", col(\"microrregiao.nome\"))\\\n",
-    "            .withColumn(\"id_mesorregiao\", col(\"microrregiao.mesorregiao.id\"))\\\n",
-    "            .withColumn(\"nome_mesorregiao\", col(\"microrregiao.mesorregiao.nome\"))\\\n",
-    "            .withColumn(\"id_UF\", col(\"microrregiao.mesorregiao.uf.id\"))\\\n",
-    "            .withColumn(\"sigla_UF\", col(\"microrregiao.mesorregiao.uf.sigla\"))\\\n",
-    "            .withColumn(\"nome_UF\", col(\"microrregiao.mesorregiao.uf.nome\"))\\\n",
-    "            .withColumn(\"id_regiao\", col(\"microrregiao.mesorregiao.uf.regiao.id\"))\\\n",
-    "            .withColumn(\"sigla_regiao\", col(\"microrregiao.mesorregiao.uf.regiao.sigla\"))\\\n",
-    "            .withColumn(\"nome_regiao\", col(\"microrregiao.mesorregiao.uf.regiao.nome\"))\\\n",
-    "            .withColumn(\"id_regiao-imediata\", col(\"regiao-imediata.id\"))\\\n",
-    "            .withColumn(\"nome_regiao-imediata\", col(\"regiao-imediata.nome\"))\\\n",
-    "            .withColumn(\"id_regiao-intermediaria\", col(\"regiao-imediata.regiao-intermediaria.id\"))\\\n",
-    "            .withColumn(\"nome_regiao-intermediaria\", col(\"regiao-imediata.regiao-intermediaria.nome\"))\\\n",
-    "            .drop(\"regiao-imediata\", \"microrregiao\")\n",
+    "df_municipios = df_municipios.select(\n",
+    "\t\t\t                     col(\"id\").alias(\"id_municipio\")\\\n",
+    "                                ,col(\"nome\").alias(\"nome_municipio\")\\\n",
+    "                                ,col(\"microrregiao.id\").alias(\"id_microrregiao\")\\\n",
+    "                                ,col(\"microrregiao.nome\").alias(\"nome_microrregiao\")\\\n",
+    "                                ,col(\"microrregiao.mesorregiao.id\").alias(\"id_mesorregiao\")\\\n",
+    "                                ,col(\"microrregiao.mesorregiao.nome\").alias(\"nome_mesorregiao\")\\\n",
+    "                                ,col(\"microrregiao.mesorregiao.uf.id\").alias(\"id_UF\")\\\n",
+    "                                ,col(\"microrregiao.mesorregiao.uf.sigla\").alias(\"sigla_UF\")\\\n",
+    "                                ,col(\"microrregiao.mesorregiao.uf.nome\").alias(\"nome_UF\")\\\n",
+    "                                ,col(\"microrregiao.mesorregiao.uf.regiao.id\").alias(\"id_regiao\")\\\n",
+    "                                ,col(\"microrregiao.mesorregiao.uf.regiao.sigla\").alias(\"sigla_regiao\")\\\n",
+    "                                ,col(\"microrregiao.mesorregiao.uf.regiao.nome\").alias(\"nome_regiao\")\\\n",
+    "                                ,col(\"regiao-imediata.id\").alias(\"id_regiao-imediata\")\\\n",
+    "                                ,col(\"regiao-imediata.nome\").alias(\"nome_regiao-imediata\")\\\n",
+    "                                ,col(\"regiao-imediata.regiao-intermediaria.id\").alias(\"id_regiao-intermediaria\")\\\n",
+    "                                ,col(\"regiao-imediata.regiao-intermediaria.nome\").alias(\"nome_regiao-intermediaria\"))\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -218,7 +218,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<style scoped>\n",
@@ -100615,12 +100614,12 @@
     }
    ],
    "source": [
-    "display(df_flat)"
+    "display(df_municipios)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100635,7 +100634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100650,7 +100649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100665,7 +100664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100680,7 +100679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100695,7 +100694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100710,7 +100709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100725,7 +100724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100740,7 +100739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -100763,6 +100762,9 @@
    },
    "notebookName": "API's IBGE para obter dados de Localidade, População, PIB e IDH",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
