--- a/API's IBGE para obter dados de Localidade, População, PIB e IDH.ipynb
+++ b/API's IBGE para obter dados de Localidade, População, PIB e IDH.ipynb
@@ -1380,8 +1380,7 @@
    },
    "outputs": [],
    "source": [
-    "df_agregados = df_agregados.withColumn(\"resultados_explode\", explode(\"resultados\"))\\\n",
-    "                            .drop(\"resultados\")"
+    "df_agregados = df_agregados.withColumn(\"resultados\", explode(\"resultados\"))"
    ]
   },
   {
@@ -1401,7 +1400,36 @@
    },
    "outputs": [],
    "source": [
-    "df_agregados = df_agregados.withColumn(\"resultados_explode_series\", explode(\"resultados_explode.series\"))"
+    "df_agregados = df_agregados.withColumn(\"resultados\", explode(\"resultados.series\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d3bf7820-09ae-4274-b288-0d3494a3ae43",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n |-- id: string (nullable = true)\n |-- resultados: struct (nullable = true)\n |    |-- localidade: struct (nullable = true)\n |    |    |-- id: string (nullable = true)\n |    |    |-- nivel: struct (nullable = true)\n |    |    |    |-- id: string (nullable = true)\n |    |    |    |-- nome: string (nullable = true)\n |    |    |-- nome: string (nullable = true)\n |    |-- serie: struct (nullable = true)\n |    |    |-- 2018: string (nullable = true)\n |-- unidade: string (nullable = true)\n |-- variavel: string (nullable = true)\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_agregados.printSchema()"
    ]
   },
   {
@@ -1422,9 +1450,9 @@
    "outputs": [],
    "source": [
     "df_agregados = df_agregados.select(\n",
-    "\t\t\t       col(\"resultados_explode_series.localidade.id\").alias(\"id_UF\")\\\n",
-    "            ,col(\"resultados_explode_series.localidade.nome\").alias(\"nome_UF\")\\\n",
-    "            ,col(\"resultados_explode_series.serie.2018\").alias(\"qtd_populacao\"))\n",
+    "\t\t\t       col(\"resultados.localidade.id\").alias(\"id_UF\")\\\n",
+    "            ,col(\"resultados.localidade.nome\").alias(\"nome_UF\")\\\n",
+    "            ,col(\"resultados.serie.2018\").alias(\"qtd_populacao\"))\n",
     "            \n"
    ]
   },
@@ -1786,12 +1814,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "# df_indicadores.write\\\n",
-    "#               .format('json')\\\n",
-    "#               .mode('overwrite')\\\n",
-    "#               .save(\"dbfs:/FileStore/ibge/bronze/indicadores_IDH.json_file.json\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1809,12 +1832,97 @@
     }
    },
    "outputs": [],
-   "source": [
-    "# df_indicadores = spark.read\\\n",
-    "#               .format('json')\\\n",
-    "#               .option('multiline')\\\n",
-    "#               .save(\"dbfs:/FileStore/ibge/bronze/indicadores_IDH.json_file.json\")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f73f3c6d-7d25-4c32-b5c1-c3975fd9b8ee",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "775bdad7-d3b9-4400-a4e5-93bec0c5cbbe",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "48f4fbf2-0074-4a0f-b6ad-83be8c2de984",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b44db707-460e-4261-9ba1-75d42998962e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a188ec64-5e41-46a6-b886-14d95d275adb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1832,11 +1940,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "#para transformar o df_json em multiline em ter que ler\n",
-    "\n",
-    "#df_indicadores = spark.read.option(\"multiline\", 'true').json(spark.sparkContext.parallelize([df_indicadores]))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1854,9 +1958,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "#display(df_flat_indicadores)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
